[tool.poetry]
name = "authentication"
version = "0.1.0"
description = ""
authors = ["Paul Watkins <paul.watkins@croud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.80"
pyjwt = "^2.8.0"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
